--- a/src/main/resources/conf/janusgraph.properties
+++ b/src/main/resources/conf/janusgraph.properties
@@ -9,5 +9,5 @@ cache.db-cache-time = 180000
 cache.db-cache-size = 0.5
 index.search.backend=elasticsearch
 index.search.hostname=127.0.0.1
-schema.constraints=true
-schema.default=none
+#schema.constraints=true
+#schema.default=none
